kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: accommodation
  labels:
    app: accommodation
